--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mohdzaid123.github.io/pics",
+  "homepage": "http://mohdzaid123.github.io/pics",
   "name": "pics",
   "version": "0.1.0",
   "private": true,
